Updated widget to use internal methods for restoring the state of the widgets layers,  also fix for overlay manager sometimes being covered by hidden div making it impossible to click add.

--- a/owf-map-widget/css/map.css
+++ b/owf-map-widget/css/map.css
@@ -182,3 +182,6 @@ img {
   margin-bottom: 5px;
   margin-left: 5px;
 }
+.esriControlsBR{
+  visibility: hidden;
+}
